--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "turf": "^7.1.0",
+    "@turf/turf": "^7.1.0",
     "date-fns": "^2.30.0"
   },
   "devDependencies": {
