--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
+    "postcss": "^8.4.38", // Or the latest compatible version
+    "tailwindcss": "^3.4.4", // Or the latest compatible version
+    "autoprefixer": "^10.4.19", // Also a good idea to update this
     "vite": "^5.4.8"
   }
+
 }
