--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "https://via.placeholder.com/192/1d4ed8/ffffff?text=🕒",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icon-512.png",
+      "src": "https://via.placeholder.com/512/1d4ed8/ffffff?text=🕒",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
