--- a/package.json
+++ b/package.json
@@ -8,19 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.45.4",
-    "papaparse": "^5.4.1",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "@turf/turf": "^7.1.0",
-    "date-fns": "^2.30.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "autoprefixer": "^10.4.19",
-    "vite": "^5.4.8"
+    "vite": "^5.4.21"
   }
 }
