--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "timeclockapp",
-  "version": "1.0.0",
-  "private": true,
+  "dependencies": {
+    "@supabase/supabase-js": "^2.46.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
+    "vite": "^5.4.9"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-  },
-  "dependencies": {
-    "@react-google-maps/api": "^2.19.3",
-    "@supabase/supabase-js": "^2.45.4",
-    "date-fns": "^3.6.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "vite": "^5.4.21"
   }
 }
