--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.4.9"
   },
   "scripts": {
