--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "@react-google-maps/api": "^2.19.3"
   },
   "scripts": {
     "dev": "vite",
