--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-"name": "timeclockapp",
-"private": true,
-"version": "0.0.0",
-"type": "module",
-"scripts": {
-"dev": "vite",
-"build": "vite build",
-"lint": "eslint .",
-"preview": "vite preview"
-},
-"dependencies": {
-"@react-google-maps/api": "^2.19.3",
-"@supabase/supabase-js": "^2.45.4",
-"react": "^18.3.1",
-"react-dom": "^18.3.1"
-},
-"devDependencies": {
-"@vitejs/plugin-react": "^4.3.1",
-"eslint": "^9.9.1",
-"eslint-plugin-react": "^7.35.1",
-"eslint-plugin-react-hooks": "^5.1.0-rc.0",
-"eslint-plugin-react-refresh": "^0.4.9",
-"vite": "^5.4.8"
-}
+  "name": "timeclockapp",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
+    "@supabase/supabase-js": "^2.45.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.35.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.8"
+  }
 }
