--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.45.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
