--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@supabase/supabase-js": "^2.45.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
