--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-[build]
-  command = "npm run build"
+#[build]
+  #command = "npm run build"
   functions = "netlify/functions"
   publish = "dist"  # Adjust if your build output is different, e.g., "build" for Vite
 
