--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.8",
+    "@vitejs/plugin-react": "^4.3.1",
+    "tailwindcss": "^3.4.14",
+    "autoprefixer": "^10.4.20",
     "vite": "^5.4.8"
+}
   }
 }
