--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "name": "time-clock-app",
-  "version": "0.0.0",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "@supabase/supabase-js": "^2.45.4",
     "@supabase/auth-helpers-react": "^0.5.0",
-    "react-leaflet": "^4.2.1",
+    "@supabase/supabase-js": "^2.45.4",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
-    "react-datepicker": "^4.25.0",
-    "chart.js": "^4.4.4",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "xlsx": "^0.18.5",
-    "file-saver": "^2.0.5"
+    "react-datepicker": "^7.5.0",
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.27.0",
+    "@turf/turf": "^7.1.0",
+    "chart.js": "^4.4.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.8",
-    "@vitejs/plugin-react": "^4.3.1",
-    "tailwindcss": "^3.4.14",
     "autoprefixer": "^10.4.20",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.8"
-}
   }
 }
