--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,24 @@
 {
-  "name": "Time Clock",
-  "short_name": "Clock",
-  "description": "Auto time tracking with geofencing",
+  "name": "TimeClock App",
+  "short_name": "TimeClock",
+  "description": "Employee clock-in system with admin dashboard",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#3b82f6",
+  "theme_color": "#1d4ed8",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "https://img.icons8.com/?size=192&id=103081&format=png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     },
     {
-      "src": "/icon-512.png",
+      "src": "https://img.icons8.com/?size=512&id=103081&format=png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     }
   ]
 }
